2008-01-14  John W. Eaton  <jwe@octave.org>

	* optimization/sqp.m: Fix function definitions in test code.

2008-01-12  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_binary.in: New file.
	* plot/gnuplot_binary.m: Delete.
	* plot/Makefile.in (SOURCES): Remove gnuplot_binary.m from the list.
	(SOURCES_IN, GEN_M): New macros.
	(DISTFILES): Include $(SOURCES_IN) in the list.
	(FCN_FILES): Include $(GEN_M) in the list.
	(all): Depend on $(GEN_M).
	($(GEN_M): %.m : $(TOPDIR)/Makeconf): New pattern rule.
	(distclean): Also remove $(GEN_M).

2008-01-11  John W. Eaton  <jwe@octave.org>

	* optimization/sqp.m: New test from example in doc string.

2008-01-10  Ben Abbott  <bpabbott@mac.com>

	* polynomial/mpoles.m: Avoid cases where poles could be assigned
	to more than one multiplicity group.

2008-01-10  John W. Eaton  <jwe@octave.org>

	* plot/gnuplot_binary.m: New file.
	* plot/Makefile.in (SOURCES): Add it to the list.

2008-01-09  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Fail if filename includes a directory part that
	does not exist.

2008-01-07  John W. Eaton  <jwe@octave.org>

	* miscellaneous/copyfile.m, miscellaneous/movefile.m:
	Error if glob call fails to match any files.

2008-01-04  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* strings/strtrim.m: Doc fix.

2008-01-04  Muthiah Annamalai  <muthuspost@gmail.com>

	* general/sub2ind.m, general/ind2sub.m: Doc fix.

2008-01-04  Soren Hauberg   <hauberg@gmail.com>

	* set/create_set.m, set/union.m: Accept "rows" argument.

2008-01-02  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Correctly handle pbm terminal.

2007-12-28  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: Use strcat instead of fullfile to add file
	extensions.

2007-12-28  David Bateman  <dbateman@free.fr>

	* ezcontourf.m, ezcontour.m, ezmeshc.m, ezmesh.m, ezplot3.m,
	__ezplot__.m, ezpolar.m, ezsurfc.m, ezsurf.m: New functions.
	* Makefile.in (SOURCES): Add to the sources.

2007-12-28  Kai Habel  <kai.habel@gmx.de>
